tests/sessions/python/unpickle_error.txtar
-- main.py main --
import autokitteh

# Will cause recursion error when unpickled
class Infi:
    def __init__(self):
        self._lookup = {}

    def __getattr__(self, attr):
        if attr in self._lookup:
            return self._lookup[attr]
        raise AttributeError(attr)


def main(event):
	get_infi()


@autokitteh.activity
def get_infi():
	return Infi()

# TODO: Why don't we see output? We do see errors in error.txt
-- error.txt --
rpc error: code = Internal desc = 
=======================================================================================================
The below error means you need to use the @autokitteh.activity decorator.
See https://docs.autokitteh.com/develop/python/#function-arguments-and-return-values-must-be-pickleable
for more details.
=======================================================================================================

Traceback (most recent call last):
  File "/tmp/ak-runner-61313364/runner/main.py", line 431, in ActivityReply
    result = pickle.loads(request.result.custom.data)
  File "/tmp/ak-user-59271986/main.py", line 9, in __getattr__
    if attr in self._lookup:
               ^^^^^^^^^^^^
  File "/tmp/ak-user-59271986/main.py", line 9, in __getattr__
    if attr in self._lookup:
               ^^^^^^^^^^^^
  File "/tmp/ak-user-59271986/main.py", line 9, in __getattr__
    if attr in self._lookup:
               ^^^^^^^^^^^^
  [Previous line repeated 989 more times]
RecursionError: maximum recursion depth exceeded
